debugging mysteriour 'list-item' class

--- a/public/stylesheets/sidebar.css
+++ b/public/stylesheets/sidebar.css
@@ -41,6 +41,7 @@ ol li {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    height: 22px;
 }
 
 .list-edit-dropdown {
