--- a/views/dashboard-task.pug
+++ b/views/dashboard-task.pug
@@ -6,18 +6,19 @@ append head
 div.checkbox-container
     div(class="checkbox grid-square")
         input(type="checkbox")
-    div(class="completed grid-square")
-        i(class="fas fa-check")
-    div(class="postpone grid-square")
-        i(class="fas fa-calendar-plus")
-    div(class="prioritize grid-square")
-        i(class="fas fa-exclamation")
-    div(class="due grid-square")
-        i(class="fas fa-calendar-week")
-    div(class="moveTo grid-square")
-        i(class="fas fa-list-alt")
-    div(class="category grid-square")
-        i(class="fas fa-tag")
+    div.split-3
+        div(class="completed grid-square")
+            i(class="fas fa-check")
+        div(class="postpone grid-square")
+            i(class="fas fa-calendar-plus")
+            div(class="postpone-dates dropdown" style='display: none')
+    div.split-2
+        div(class="moveTo grid-square")
+            i(class="fas fa-list-alt")
+            div(class="list-of-lists dropdown" style='display: none')
+        div(class="category grid-square")
+            i(class="fas fa-tag")
+            div(class="list-of-tags dropdown" style='display: none')
     div(class="delete grid-square")
         i(class="fas fa-trash-alt")
 +errorSummary(errors)
