--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -51,7 +51,7 @@
     border-bottom: 1px dotted lightgray;
 }
 
-#tasksContainer div:hover {
+.single-task-selected {
     background-color: #ffffc9;
 }
 
