--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -6,8 +6,10 @@ body {
 #loginBtCon {
     display:flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-around;
     align-items: center;
+    margin-top: 30px;
+    width: 400px;
 }
 
 #loginBtCon > button > a {
@@ -18,42 +20,35 @@ body {
     display:flex;
     flex-direction:column;
     justify-content:space-around;
-    align-items: flex-start;
-    
+    align-items: flex-start;   
 }
 
 #img_container{
-    flex-basis: 50%;
-    justify-self: center;
     align-self:center;
+    padding-left: 40px;
 
 }
 
-#signup_container{
-    /* display: grid;
-    grid-template-columns: 30% 70%;
-    grid-template-rows: 100%; */
-    
+#signup_container{ 
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    /* align-items: center; */
-    /* align-self: flex-end; */
     position:absolute;
-    width: 100%;
-    height: 100%; 
-    
+    width: 80%;
+    height: 80%; 
+}
+
+.form {
+    padding-left: 10px;
+    width: 400px;
 }
 
 #form_container{
     display:flex;
     flex-direction: column;
     justify-content: space-around;
-    justify-self:flex-start;
-    align-items: center;
-    width: 100%;
+    align-items: flex-start;
     flex-basis: 50%;
-
 }
 
 #signupForm {
@@ -62,7 +57,7 @@ body {
     justify-content: space-around;
     align-self:flex-start;
     justify-self:flex-start;
-    line-height: 2em;
+    line-height: 1em;
     width:100%;
 }
 
@@ -72,16 +67,24 @@ body {
 }
 
 
-#username_box{
-    display:flex;
-    flex-direction:column;
-    justify-content:space-around;
-    line-height: 2em;
-}
-
 
 #username_box, #firstname_box, #lastname_box,
 #email_box, #password_box, #confirm_box {
-    line-height: 1.5em;
+    display:flex;
+    flex-direction:row;
+    justify-content:space-between ;
+    align-items: center;
+    width: 500px;;
+
+}
+
+
+.errmsg{
+    color:red;
+    margin-left:15px;
+}
+
+.inp-field{
+   max-width:400px;
 }
 
