--- a/views/user-signup.pug
+++ b/views/user-signup.pug
@@ -3,38 +3,31 @@ extends layout.pug
 include utils.pug
 
 block content
-    //- div#signup_main
-        //- div#loginBtCon
-        //-     button(type='submit')
-        //-         a(href="/login") Log in 
-        //- div.errMsg(hidden)
-        //-             +errorSummary(errors)
+    div#signup_main
+        div.errMsg(hidden)
+                    +errorSummary(errors)
     div#signup_container
         div#img_container
             img(src='images/office.png')
         div#form_container
-            form(action='/signup' method='post')
-                //- div#singupForm
+            form(action='/signup' method='post' class="form")
                 input(type='hidden' name='_csrf' value=csrfToken)
                 div#username_box
                     +field('Username', 'username', username)
-                    div.username-error(hidden="true")
                 div#firstname_box
                     +field('First Name', 'firstName', firstName)
-                    div.firstname-error(hidden="true")
                 div#lastname_box
                     +field('Last Name', 'lastName', lastName)
-                    div.lastname-error(hidden="true")
                 div#email_box
                     +field('Email Address', 'email', email, 'email')
-                    div.email-error(hidden="true")
                 div#password_box
                     +field('Password', 'password', password, 'password')
-                    div.password-error(hidden="true")
                 div#confirm_box
                     +field('Confirm Password', 'confirmPassword', confirmPassword, 'password')
-                    div.confirm-error(hidden="true")
-                button(type='submit') Sign Up
-                    if !errors
-                        a(href='/dashboard')           
+                div#loginBtCon
+                    button(type='submit') Sign Up
+                        if !errors
+                            a(href='/dashboard')   
+                    button(type='submit')
+                        a(href="/login") Already Has a Account? Log in         
         script(src="/javascripts/errors.js" type="module")
