fixed the typo for image

--- a/views/user-signup.pug
+++ b/views/user-signup.pug
@@ -8,7 +8,7 @@ block content
                     +errorSummary(errors)
     div#signup_container
         div#img_container
-            img(src='images/office.png')
+            img(src='images/office-o.png')
         div#form_container
             form(action='/signup' method='post' class="form")
                 input(type='hidden' name='_csrf' value=csrfToken)
