--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -3,16 +3,16 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-#loginBtCon {
+#signupBtCon {
     display:flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between ;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 20px;
     width: 400px;
 }
 
-#loginBtCon > button > a {
+#signupBtCon > button > a {
     color:white;
 }
 
@@ -24,8 +24,8 @@ body {
 }
 
 #img_container{
-    align-self:center;
-    padding-left: 40px;
+    align-self:right;
+    padding-left: 0px;
 
 }
 
@@ -34,13 +34,15 @@ body {
     flex-direction: row;
     justify-content: space-around;
     position:absolute;
-    width: 80%;
-    height: 80%; 
+    padding-top:50px;
+    width: 100%;
+    height: 70%; 
 }
 
 .form {
-    padding-left: 10px;
+    padding-left: 0px;
     width: 400px;
+
 }
 
 #form_container{
@@ -49,16 +51,16 @@ body {
     justify-content: space-around;
     align-items: flex-start;
     flex-basis: 50%;
+    padding-left:20px;
+    padding-top:20px;
 }
 
-#signupForm {
-    display:flex;
-    flex-direction:column;
-    justify-content: space-around;
-    align-self:flex-start;
-    justify-self:flex-start;
-    line-height: 1em;
-    width:100%;
+.signup_logo{
+    width:125px;
+    height:100px;
+    position:absolute;
+    top:25px;
+    right:25px;
 }
 
 
@@ -67,12 +69,11 @@ body {
 }
 
 
-
 #username_box, #firstname_box, #lastname_box,
 #email_box, #password_box, #confirm_box {
     display:flex;
     flex-direction:row;
-    justify-content:space-between ;
+    justify-content:space-between;
     align-items: center;
     width: 500px;;
 
@@ -88,3 +89,11 @@ body {
    max-width:400px;
 }
 
+#signuppage_container{
+    display:flex;
+    flex-direction: row;
+    justify-content:space-around;
+    align-items: flex-start;
+    padding-top:20px;
+    padding-left:0px
+}
