list rename / delete features complete front and back end.

--- a/views/dashboard-list.pug
+++ b/views/dashboard-list.pug
@@ -19,8 +19,10 @@ block content
                     li#tomorrow Tomorrow's Tasks
                     li#all All Tasks
             div.lists
-                div.list-header Lists
-                div.add-list-button(role='button') +
+                div.list-header-container
+                    div.list-header Lists
+                    div.add-list-button(role='button')
+                        i.far.fa-plus-square
                 ol#task-lists
             div.lists
                 div.list-header Categories
