--- a/public/stylesheets/sidebar.css
+++ b/public/stylesheets/sidebar.css
@@ -28,10 +28,17 @@ ol#default-lists {
 }
 
 .lists .list-header:hover,
-.lists li:hover {
+.lists li:hover,
+.list-header-container:hover,
+.list-box:hover {
     background-color: var(--divider-color);
-    padding-left: 5px;
 }
+
+.list-edit-option:hover {
+    background-color: var(--divider-color);
+    margin-left: 0;
+}
+
 
 ol li {
     line-height: 2em;
@@ -54,6 +61,8 @@ ol li {
     top: 15px;
     background-color: white;
     z-index: 3;
+    box-shadow: 0 1px 4px 1px rgb(0 0 0 / 20%);
+    border-radius: 3px;
 }
 
 .list-edit-option {
@@ -62,7 +71,37 @@ ol li {
     margin-left: 5px;
 }
 
-.list-edit-option:hover {
-    background-color: var(--divider-color);
-    padding-left: 5px;
+.add-list-button {
+    z-index: 10;
+}
+
+.list-header-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.fa-plus-square {
+    color: #1575c1;
+}
+
+.fa-plus-square:hover {
+    color: #a5c9e7;
+    background-color: #1575c1;
+}
+
+.list-icons {
+    display: none;
+    color: rgb(117, 165, 228)
+}
+
+
+.fa-caret-square-down:hover {
+    color: #a5c9e7;
+    background-color: #1575c1;
+}
+
+.list-box:hover > .list-icons {
+    display: block;
+    /* color: red; */
 }
