added visual indicator of task edits being saved for changing task list (today/tomorrow/all pages only) and description

--- a/public/stylesheets/summary.css
+++ b/public/stylesheets/summary.css
@@ -80,3 +80,9 @@ textarea.summary-inp {
     resize: none;
     transition: all 0.4s;
 }
+
+.mark-saved {
+    padding-left: 10px;
+    color: var(--secondary-color);
+    font-style: italic;
+}
