refactoed all the code to mark task as complete, delete, move, change tag to work

--- a/views/dashboard-task.pug
+++ b/views/dashboard-task.pug
@@ -12,7 +12,12 @@ div.checkbox-container
         div(class="postpone grid-square")
             i(class="fas fa-calendar-plus")
             div(class="postpone-dates dropdown" style='display: none')
-    div.split-2
+        div(class="alert grid-square")
+            i(class="fas fa-exclamation")
+    div.split-3
+        div(class="due grid-square")
+            i(class="fas fa-calendar-week")
+            div(class="hidden-cal dropdown" style='display: none')
         div(class="moveTo grid-square")
             i(class="fas fa-list-alt")
             div(class="list-of-lists dropdown" style='display: none')
