--- a/views/dashboard-list.pug
+++ b/views/dashboard-list.pug
@@ -23,7 +23,8 @@ block content
                     div.list-header Lists
                     div.add-list-button(role='button')
                         i.far.fa-plus-square
-                ol#task-lists
+                        
+                div#task-lists
             div.lists
                 div.list-header Categories
 
