updated deadline div in task summary so it reflect deadline date. updated task div in main so the overflow text does not show

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -51,6 +51,11 @@
     border-bottom: 1px dotted lightgray;
 }
 
+.single-task {
+    height: 34px;
+    overflow: hidden;
+}
+
 .single-task-selected {
     background-color: #ffffc9;
 }
