--- a/views/dashboard-list.pug
+++ b/views/dashboard-list.pug
@@ -55,7 +55,7 @@ block content
         div#spacer
         div#summary
             include dashboard-summary.pug
-        script(src="/javascripts/dashboard-list.js" type="module")
+        script(src="/javascripts/dashboard.js" type="module")
         script(src="/javascripts/dashboard-inbox.js" type="module")
         script(src="/javascripts/dashboard-tasks.js" type="module")
         //- script(src="/javascripts/dashboard-summary.js" type="module")
