--- a/views/dashboard-list.pug
+++ b/views/dashboard-list.pug
@@ -23,7 +23,7 @@ block content
                     div.list-header Lists
                     div.add-list-button(role='button')
                         i.far.fa-plus-square
-                        
+
                 div#task-lists
             div.lists
                 div.list-header Categories
@@ -55,7 +55,7 @@ block content
         div#spacer
         div#summary
             include dashboard-summary.pug
-        script(src="/javascripts/dashboard-list.js" type="module")
+        script(src="/javascripts/dashboard.js" type="module")
         script(src="/javascripts/dashboard-inbox.js" type="module")
         script(src="/javascripts/dashboard-tasks.js" type="module")
         //- script(src="/javascripts/dashboard-summary.js" type="module")
