--- a/public/stylesheets/sidebar.css
+++ b/public/stylesheets/sidebar.css
@@ -1,6 +1,6 @@
 /* sidebar elements */
 .sidebar-logo {
-    background-image: url("../images/logo-o.png");
+    background-image: url("../images/logo-o-dark.png");
     background-repeat: no-repeat;
     background-size: 150px auto;
     height: 100px;
@@ -39,19 +39,15 @@ ol#default-lists {
     margin-left: 0;
 }
 
-
 ol li {
     line-height: 2em;
 }
-
 
 .list-header-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
-
-
 
 .list-box {
     display: flex;
@@ -62,7 +58,7 @@ ol li {
 
 .list-icons {
     display: none;
-    color: rgb(117, 165, 228)
+    color: rgb(117, 165, 228);
 }
 
 .list-box:hover > .list-icons {
