--- a/views/dashboard-summary.pug
+++ b/views/dashboard-summary.pug
@@ -1,4 +1,15 @@
 div.task-summary
     div#task-recap
-        p details about the task
+        div#title-div Task Status
+        div.recap-containers
+            div.recap-details
+                div#recap-in-progress.recap-counter 0
+                div In Progress
+            div.recap-details
+                div#recap-due-today.recap-counter 0
+                div Due Today
+            div.recap-details
+                div#recap-completed.recap-counter 0
+                div Completed
+        div.bad-joke How do we keep track of all these to-moos? We use a cowculator.
     div#task-details
