--- a/views/home.pug
+++ b/views/home.pug
@@ -10,18 +10,18 @@ block content
         div.navbar-container
             div.navbar
                 a(href='/' class="moogo")
-                    img(src='images/logo-o.png', alt="cow-on-computer" id="logo")
+                    img(src='images/logo-o-light.png', alt="cow-on-computer" id="logo")
                 ul
-                    li 
+                    li
                         a(href="/") Home
-                    li 
-                        a(href="/upgrade") Upgrade  
-                    li 
-                        a(href="/team") Meet the team 
-                    li 
+                    li
+                        a(href="/upgrade") Upgrade
+                    li
+                        a(href="/team") Meet the team
+                    li
                         a(href="/login") Log in
-                    li(class="signup") 
-                        a(href="/signup") Sign up for free 
+                    li(class="signup")
+                        a(href="/signup") Sign up for free
         div.header-content
             h1 Funny Slogan hur hur hur
             div.carousel
@@ -55,8 +55,8 @@ block content
                     div.page-icon
     footer
         div.social-container
-            div.social-links 
-                div(class="christy person") 
+            div.social-links
+                div(class="christy person")
                     h4 Christy
                     ul
                         li
@@ -65,7 +65,7 @@ block content
                             a(href="#") Github
                         li
                             a(href="#") Instagram
-                div(class="haozhen person") 
+                div(class="haozhen person")
                     h4 Haozhen
                     ul
                         li
