--- a/views/team.pug
+++ b/views/team.pug
@@ -10,18 +10,18 @@ block content
         div.navbar-container
             div.navbar
                 a(href='/' class="moogo")
-                    img(src='images/logo-o.png', alt="cow-on-computer" id="logo")
+                    img(src='images/logo-o-light.png', alt="cow-on-computer" id="logo")
                 ul
-                    li 
+                    li
                         a(href="/") Home
-                    li 
-                        a(href="/upgrade") Upgrade  
-                    li 
-                        a(href="/team") Meet the team 
-                    li 
+                    li
+                        a(href="/upgrade") Upgrade
+                    li
+                        a(href="/team") Meet the team
+                    li
                         a(href="/login") Log in
-                    li(class="signup") 
-                        a(href="/signup") Sign up for free 
+                    li(class="signup")
+                        a(href="/signup") Sign up for free
             div.header-content
                 h1 Meets your amazing team!
                 h2 Thank you for your hard work!
@@ -31,12 +31,12 @@ block content
             img(src="images/ccow-o.png", alt="cow in yellow shirt")
             div.about-left
                 h2 Christy
-                p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.        
+                p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         div(class="h-cow cow")
             div.about-right
                 h2 Haozhen
                 p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            img(src="images/hcow-o.png", alt="cow on phone")       
+            img(src="images/hcow-o.png", alt="cow on phone")
         div(class="j-cow cow")
             img(src="images/jcow-o.png", alt="rock star cow")
             div.about-left
@@ -46,11 +46,11 @@ block content
             div.about-right
                 h2 Peter
                 p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            img(src="images/pcow-o.png", alt="nerd cow")     
+            img(src="images/pcow-o.png", alt="nerd cow")
     footer
         div.social-container
-            div.social-links 
-                div(class="christy person") 
+            div.social-links
+                div(class="christy person")
                     h4 Christy
                     ul
                         li
@@ -59,7 +59,7 @@ block content
                             a(href="#") Github
                         li
                             a(href="#") Instagram
-                div(class="haozhen person") 
+                div(class="haozhen person")
                     h4 Haozhen
                     ul
                         li
