implemented category and deadline tags for individual task items, still needs styling. will be using this to implement category and deadline change functionalities in task summary panel.

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -17,6 +17,7 @@
     --medium-div-bg: #7fadcd;
     --inp-border: lightgrey;
     --task-recaps-bg: #d5e6f3;
+    --tasks-due-today: #0d783d;
 }
 
 * {
