fixed dynamic list loading

--- a/views/dashboard-list.pug
+++ b/views/dashboard-list.pug
@@ -21,7 +21,7 @@ block content
             div.lists
                 div.list-header-container
                     div.list-header Lists
-                    div.add-list-button(role='button')
+                    div.add-list-button.add-list-button-l(role='button')
                         i.far.fa-plus-square
                 div#task-lists
 
