added animations when dropping menu along with creating new list and tag from the task dropdown menu

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -6,6 +6,7 @@
 @import url("/stylesheets/login.css");
 @import url("/stylesheets/errors.css");
 @import url("/stylesheets/sidebar-animation.css");
+@import url("/stylesheets/task-animation.css");
 
 :root {
     --main-color: #0055b2;
