--- a/views/dashboard-task.pug
+++ b/views/dashboard-task.pug
@@ -9,20 +9,20 @@ div.checkbox-container
     div.split-3
         div(class="completed grid-square")
             i(class="fas fa-check")
-        div(class="postpone grid-square")
+        div(class="postpone grid-square drop-square")
             i(class="fas fa-calendar-plus")
             div(class="postpone-dates dropdown" style='display: none')
         div(class="alert grid-square")
             i(class="fas fa-exclamation")
     div.split-3
-        div(class="due grid-square")
-            i(class="fas fa-calendar-week")
+        div(class="due grid-square drop-square")
+            i(class="fas fa-calendar-week drop-square")
             div(class="hidden-cal dropdown" style='display: none')
-        div(class="moveTo grid-square")
-            i(class="fas fa-list-alt")
+        div(class="moveTo grid-square drop-square")
+            i(class="fas fa-list-alt drop-square")
             div(class="list-of-lists dropdown" style='display: none')
-        div(class="category grid-square")
-            i(class="fas fa-tag")
+        div(class="category grid-square drop-square")
+            i(class="fas fa-tag drop-square")
             div(class="list-of-tags dropdown" style='display: none')
     div(class="delete grid-square")
         i(class="fas fa-trash-alt")
