added some slogan to the splash pages

--- a/views/home.pug
+++ b/views/home.pug
@@ -23,27 +23,27 @@ block content
                     li(class="signup") 
                         a(href="/signup") Sign up for free 
         div.header-content
-            h1 Funny Slogan hur hur hur
+            h1 Just Moo it.
             div.carousel
                 div(class="slide active")
-                    img(src="images/wavingCow-o.png", alt="" class="")
-                    div.carousel-info
-                        h2 Don't forget!
-                        p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
-                div.slide
                     img(src="images/office-o.png", alt="" class="")
                     div.carousel-info
-                        h2 Don't forget!
+                        h2 Tired of Deja-moo? We can help!
+                        p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                div.slide
+                    img(src="images/wavingCow-o.png", alt="" class="")
+                    div.carousel-info
+                        h2 Got Milk?
                         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
                 div.slide
                     img(src="images/moosic-o.png", alt="" class="")
                     div.carousel-info
-                        h2 Don't forget!
+                        h2 Cow-ABUNGA!
                         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
                 div.slide
                     img(src="images/cowblep-o.png", alt="" class="")
                     div.carousel-info
-                        h2 Don't forget!
+                        h2 This app is udderly amazing!
                         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
                 div.navigation
                     i(class="fas fa-chevron-left prev-btn")
