--- a/views/team.pug
+++ b/views/team.pug
@@ -24,7 +24,7 @@ block content
                         a(href="/signup") Sign up for free 
             div.header-content
                 h1 Meets your amazing team!
-                h2 Thank you for your hard work!
+                h2 moo-chas grass-ias!
                 img(src="images/cowow-o.png", alt="cow money")
     main
         div(class="c-cow cow")
