left sidebar: added dropdown carets, fixed css highlighting bug

--- a/public/stylesheets/sidebar.css
+++ b/public/stylesheets/sidebar.css
@@ -34,7 +34,7 @@ li {
 }
 
 
-/* .list-container div:hover, */
+.inbox-list:hover,
 .list-edit-option:hover,
 .list-header-container:hover,
 .sidebar-box:hover {
