added auto search recommendations. Search is too generic, will need to narrow query

--- a/public/stylesheets/sidebar.css
+++ b/public/stylesheets/sidebar.css
@@ -38,7 +38,8 @@ li {
 .inbox-list:hover,
 .list-edit-option:hover,
 .list-header-container:hover,
-.sidebar-box:hover {
+.sidebar-box:hover,
+.search-rec:hover {
     background-color: var(--divider-color);
 }
 
