--- a/views/dashboard-list.pug
+++ b/views/dashboard-list.pug
@@ -10,6 +10,7 @@ block content
                 +plainField('', 'search', '', null, 'Search task')
                 span.serach-button-container
                     button.search-button Search
+            div.search-recommendations
         div#user
             if locals.authenticated
                 span.welcome Welcome #{user.username}!
