--- a/public/stylesheets/sidebar.css
+++ b/public/stylesheets/sidebar.css
@@ -37,6 +37,7 @@ li {
 .category-item,
 .inbox-list {
     padding-left: 12px;
+    /* color: rgb(63, 62, 62) */
 }
 
 
@@ -125,3 +126,12 @@ ol li {
     color: #478fca;
     background-color: #a5c9e7;
 }
+
+/* #page-cover {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+
+    z-index: 20;
+    background-color: rgba(177, 171, 171, 0.5)
+} */
