--- a/views/dashboard-list.pug
+++ b/views/dashboard-list.pug
@@ -3,6 +3,7 @@ extends layout.pug
 include utils.pug
 
 block content
+    div#page-cover a
     div#header
         div.left-header
         div.search-container
