Removed gray highlight bug when selecting list-box. Removed duplicated tasks bug. Removed indented list item bug after renaming.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -58,6 +58,10 @@
     overflow: hidden;
 }
 
+.single-task label {
+    padding-left: 8px;
+}
+
 .single-task-selected {
     background-color: #ffffc9;
 }
@@ -91,7 +95,7 @@
     width: 390px;
     height: 211px;
     margin-top: 30px;
-    z-index: 100;
+    z-index: 10;
 }
 
 .add-task-box {
