--- a/views/dashboard-list.pug
+++ b/views/dashboard-list.pug
@@ -3,7 +3,7 @@ extends layout.pug
 include utils.pug
 
 block content
-    div#page-cover a
+    div#page-cover
     div#header
         div.left-header
         div.search-container
