--- a/public/stylesheets/summary.css
+++ b/public/stylesheets/summary.css
@@ -50,7 +50,12 @@
 }
 
 textarea.summary-inp {
+    padding: 5px;
+    width: 100%;
+    height: 45px;
+    resize: none;
     border: 1px solid var(--inp-border);
+    transition: all 0.4s;
 }
 
 .summary-inp:hover,
@@ -69,18 +74,11 @@ textarea.summary-inp {
 
 #summary-list-select {
     padding: 0px;
-    width: 150px;
-}
-
-textarea.summary-inp {
-    width: 100%;
-    resize: none;
-    height: 75px;
-    transition: all 0.4s;
+    width: 125px;
 }
 
 .summary-inp-focus {
-    height: 120px !important;
+    height: 100px !important;
     resize: none;
     transition: all 0.4s;
 }
